[package]
name = "s3-cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
dotenv = "0.15.0"
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.11.0"
tokio = { version = "1", features = ["full"] }
lru = "0.12.1"
anyhow = "1.0.78"
infer = "0.15.0"
